Working but not NORM

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,17 @@
 {
 	"files.associations": {
-		"*.tcc": "c"
+		"*.tcc": "c",
+		"chrono": "cpp",
+		"variant": "cpp",
+		"optional": "cpp",
+		"ratio": "cpp",
+		"system_error": "cpp",
+		"array": "cpp",
+		"functional": "cpp",
+		"regex": "cpp",
+		"tuple": "cpp",
+		"type_traits": "cpp",
+		"utility": "cpp"
 	},
 	"makefile.configureOnOpen": true
 }
